--- a/frontend/src/components/jogador/stylenotas.css
+++ b/frontend/src/components/jogador/stylenotas.css
@@ -1,33 +1,3 @@
-body {
-  margin: 0px;
-}
-
-h1,
-h2,
-h3,
-p {
-  margin: 0px;
-  font-weight: normal;
-}
-
-ul {
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
-img {
-  max-width: 100%;
-  display: block;
-}
-body {
-  background-color: #161621;
-  font-family: "Jockey One", sans-serif;
-  font-size: x-small;
-  color: white;
-  height: 100%;
-  width: 100%;
-}
-
 /* .titulo-jogadores-time1 img {
   margin-top: 15px;
   margin-right: 15px;
@@ -45,8 +15,9 @@ body {
   border-radius: 5px;
   align-items: center;
   width: 18.75rem;
-  background-color: black;
+  background-color: #09090e;
   display: flex;
+  justify-content: center;
 }
 .jogadores-time1 h2 {
   font-size: 1rem;
