--- a/frontend/src/components/navBar/navBar.css
+++ b/frontend/src/components/navBar/navBar.css
@@ -1,9 +1,8 @@
-
 .navbar-container{
     width: 100%;
     height: 15vh;
 }
-.top{
+.navBarHeader{
     height: 75%;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -11,32 +10,32 @@
     align-items: center;
     background-color: #222232;
 }
-.search{
+.navBarSearch{
     height: 25%;
     display: flex;
     justify-items: center;
     align-items: center;
 }
-.search input{
-    height: 4vh;
+.navBarSearch input{
+    height: 3.8vh;
     padding-left: 2rem;
     border-radius: 0 0 0 15px;
-    width: 85vw;
+    width: 80vw;
     background-color: #353542;
     border: none;
     color: #ACACAC;
 }
-.search input:focus{
+.navBarSearch input:focus{
     outline: 0;
 }
-.search button{
+.navBarSearch button{
     display: flex;
     align-items: center;
     justify-content: center;
     border: none;
     border-radius: 0 0 15px 0;
     height: 4vh;
-    width: 15vw;
+    width: 20vw;
     background-color:  #353542;
 }
 .imagemenu{
@@ -55,12 +54,12 @@
     height: 3vh;
     width: 3vh;
 }
-.botaomenu{
+.menuHamButton{
     border: none;
     background-color: #222232;
 }
 .menu{
-    position: relative;
+    position: fixed;
     height:85vh;
     width: 30vw;
     background-color: #222232;
@@ -69,35 +68,39 @@
     display: flex;
     flex-direction: column;
 }
-.botao{
+.botao1{
+    height: 5vh;
     border: none;
+    position: relative;
     margin-top: 3vh;
     margin-bottom: 5vh;
     background-color: #222232;
     color:#ACACAC
 }
-.botao::before{
+.botao1::before{
     content: "";
     display: flex;
-    position: relative;
+    position: absolute;
     background-color: #4D4D4D;
-    left: -1.5vw;
+    left: 0vw;
     width: 30vw;
     height: 0.2vh;
     top: -0.3vh;
 }
-.botao::after{
+.botao1::after{
     content: "";
     display: flex;
-    position: relative;
+    position: absolute;
     background-color: #4D4D4D;
-    left: -1.5vw;
+    left: 0vw;
     width: 30vw;
     height: 0.2vh;
-    top: 0.2vh;
+    top: 4.5vh;
 }
 .botao2{
+    height: 5vh;
     margin-bottom: 5vh;
+    position: relative;
     border: none;
     background-color: #222232;
     color:#ACACAC
@@ -105,9 +108,9 @@
 .botao2::before{
     content: "";
     display: flex;
-    position: relative;
+    position: absolute;
     background-color: #4D4D4D;
-    left: -1.5vw;
+    left: 0vw;
     width: 30vw;
     height: 0.2vh;
     top: -0.3vh;
@@ -116,24 +119,26 @@
 .botao2::after{
     content: "";
     display: flex;
-    position: relative;
+    position: absolute;
     background-color: #4D4D4D;
-    left: -1.5vw;
+    left: 0vw;
     width: 30vw;
     height: 0.2vh;
-    top: 0.2vh;
+    top: 4.5vh;
 }
 .botao3{
     border: none;
+    height: 5vh;
+    position: relative;
     background-color: #222232;
     color:#ACACAC
 }
 .botao3::before{
     content: "";
     display: flex;
-    position: relative;
+    position: absolute;
     background-color: #4D4D4D;
-    left: -1.5vw;
+    left: 0vw;
     width: 30vw;
     height: 0.2vh;
     top: -0.3vh;
@@ -141,27 +146,28 @@
 .botao3::after{
     content: "";
     display: flex;
-    position: relative;
+    position: absolute;
     background-color: #4D4D4D;
-    left: -1.5vw;
+    left: 0vw;
     width: 30vw;
     height: 0.2vh;
-    top: 0.2vh;
+    top: 4.5vh;
 }
 .logout{
+    height: 5vh;
     position: absolute;
     background-color: #222232;
     color:#ACACAC;
-    bottom: -0.1px;
+    bottom: -1px;
     width: 30vw;
     border: none;
 }
 .logout::before{
     content: "";
     display: flex;
-    position: relative;
+    position: absolute;
     background-color: #4D4D4D;
-    left: -1.5vw;
+    left: 0vw;
     width: 30vw;
     height: 0.2vh;
     top: -0.3vh;
