Chat + tela de Cadastro + tela de Login
fiz isso ai assim, em react, não utilizei as variáveis submitadas tanto no login quanto no cadastro, mas dá para fazer uma lógica para permitir o login só após o cadastro

--- a/frontend/src/components/button/button.css
+++ b/frontend/src/components/button/button.css
@@ -21,8 +21,7 @@
 .addbutton {
   font-size: 1.25rem;
   font-family: Jockey One;
-  width: 18.75rem;
-  height: 3rem;
+  width: fit-content;
   border-radius: 0.313rem;
   color: white;
   background-color: #19ae47;
