--- a/frontend/src/pages/TorneioCriado/torneiocriado.css
+++ b/frontend/src/pages/TorneioCriado/torneiocriado.css
@@ -1,5 +1,7 @@
 body {
-    font-family: sans-serif;
+    font-family: "Roboto Flex", sans-serif;
+    background-color: #161621 !important;
+    color: white !important; 
 }
 
 .container {
@@ -8,14 +10,17 @@ body {
     align-items: center;
     margin: 20px auto;
     width: 500px;
+    border:none;
 }
 
 .quadro {
     width: 100%;
     height: 100px;
-    border: 1px solid #ccc;
+    border: none;
     padding: 20px;
     margin-bottom: 20px;
+    background: #09090E;
+
 }
 
 .mensagem {
@@ -24,10 +29,12 @@ body {
 
 .botaoEnviar {
     padding: 10px 20px;
-    background-color: #007bff;
+    margin-top: 20px !important;
+    background-color: #19AE47;
     color: white;
     border: none;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 .pesquisa {
@@ -37,5 +44,8 @@ body {
 #nomeTime {
     width: 200px;
     padding: 10px;
-    border: 1px solid #ccc;
+    background-color:  #09090E;
+    border: none;
+    
+
 }
