--- a/frontend/src/components/navBar/navBar.css
+++ b/frontend/src/components/navBar/navBar.css
@@ -59,8 +59,9 @@
     background-color: #222232;
 }
 .menu{
-    position: fixed;
-    height:85vh;
+    position: absolute;
+    z-index: 13102003;
+    height:84.9vh;
     width: 30vw;
     background-color: #222232;
 }
