--- a/frontend/src/components/convite/convite.css
+++ b/frontend/src/components/convite/convite.css
@@ -1,23 +1,35 @@
+.buttonconvite {
+  border: none;
+  height: 5vh;
+  position: relative;
+  background-color: #222232;
+  color: #acacac;
+}
+
 .modal {
   position: fixed;
   z-index: 200011;
-  width: 20vw;
+
   display: flex;
-  margin-left: 20px;
+  margin-left: 5px;
   align-items: center;
   background: #09090e;
-  padding: 25vh 30vw;
+
   border: 5px solid #0a0a0a;
   position: relative;
-  margin-top: 30%;
+  top: -15vh;
+  left: 10vw;
 }
-
+.modal-container {
+  width: 80vw;
+}
 .fechar {
+  z-index: 222222;
   position: absolute;
-  top: -25px;
-  right: -25px;
-  width: 50px;
-  height: 50px;
+  top: -15px;
+  right: -15px;
+  width: 35px;
+  height: 35px;
   border: 4px solid #000000;
   border-radius: 50%;
   background-color: #000000;
@@ -38,20 +50,13 @@
   line-height: 100%;
 }
 
-.modal label {
-  display: block;
-  color: #8b8b8b;
-  font-weight: 700;
-  margin: 1.5rem 0 0.5rem 0;
-}
-
 .modal input {
   width: 100%;
   padding: 0.7rem 0.5rem;
   box-sizing: border-box;
 }
 
-.modal button[type="submit"] {
+/* .modal button[type="submit"] {
   display: block;
   background: #006739;
   border: none;
@@ -62,11 +67,11 @@
   margin-top: 1rem;
   font-weight: 600;
   width: 100%;
-}
+} */
 
 .container-convites {
-  padding: 3rem 1.25rem;
-  height: 5rem;
+  padding: 3rem 0rem;
+
   margin-top: 1rem;
   margin-left: 1.5rem;
   border-radius: 5px;
@@ -95,12 +100,37 @@
 .conteudo-convites {
   margin-top: 20px;
 }
-
+.tudodo {
+  display: flex;
+}
 .btn-aceita {
   margin-top: 3vh;
   margin-bottom: 3vh;
   margin-left: 10vw;
+  font-size: 1rem;
+  width: fit-content;
+  padding: 10px;
+  border-radius: 0.313rem;
+  color: white;
+  background-color: #19ae47;
+  border: none;
 }
-.tudodo {
-  display: flex;
+
+.btn-aceita:hover {
+  background-color: #115a28;
+  cursor: pointer;
+}
+.btn-recusa {
+  font-size: 1rem;
+  width: fit-content;
+  padding: 10px;
+  border-radius: 0.313rem;
+  color: white;
+  background-color: #000;
+  border: none;
+}
+
+.btn-recusa:hover {
+  background-color: #202020;
+  cursor: pointer;
 }
