--- a/frontend/src/pages/time/time.css
+++ b/frontend/src/pages/time/time.css
@@ -39,7 +39,7 @@ h1 {
 .nomeTime{
   display: flex;
   justify-content: center;
-  margin-top: 4vh !important;
+  margin-top: 0 !important;
   font-size: 2rem !important;
 }
 .texto-container{
