--- a/frontend/src/pages/partida/partida.css
+++ b/frontend/src/pages/partida/partida.css
@@ -28,6 +28,6 @@ h1 {
   font-size: 1.25rem !important;
   color: white !important;
   font-weight: 600 !important;
-  margin-top: 1.875rem !important;
+  margin-top: 0 !important;
   margin-left: 0.938rem !important;
 }
