--- a/frontend/src/pages/TorneioCriado/torneiocriado.css
+++ b/frontend/src/pages/TorneioCriado/torneiocriado.css
@@ -8,13 +8,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px auto;
-    width: 500px;
+    margin-top: 20px;
+    width: 100vw;
     border:none;
 }
 
 .quadro {
-    width: 75%;
+    width: 75vw;
     height: 100px;
     border: none;
     padding: 20px;
