retirado sistema de notas e adicionado placeholder pra fotos em jogador, correçao de texto em meus torneios

--- a/frontend/src/components/meustorneioscomponent/meustorneioscomponent.css
+++ b/frontend/src/components/meustorneioscomponent/meustorneioscomponent.css
@@ -1,35 +1,38 @@
-.TorneioContainer{
-    display: flex;
-    justify-content: center;
+.TorneioContainer {
+  display: flex;
+  justify-content: center;
 }
 .dividir2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 5rem;
-    margin-top: 0.4rem;
-    border-radius: 5px;
-    width: 18.75rem;
-    background-color: #09090e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 5rem;
+  margin-top: 0.4rem;
+  border-radius: 5px;
+  width: 18.75rem;
+  background-color: #09090e;
 }
-.torneioNome{
-    display: flex;
-    align-items: center;
+.torneioNome {
+  display: flex;
+  align-items: center;
 }
-.dividir1{
-    display: flex;
+.dividir1 {
+  display: flex;
 }
-.infos1{
-    display: flex;
-    flex-direction: column;
-    justify-items: center
+.infos1 {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
 }
-.dividir1 h2{
-    color: white;
+.dividir1 h2 {
+  color: white;
 }
-.TORNEIOSS{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 16rem;
+.TORNEIOSS {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 16rem;
+}
+.texto123 {
+  margin-left: 10px;
 }
