--- a/frontend/src/components/convite/convite.css
+++ b/frontend/src/components/convite/convite.css
@@ -5,29 +5,33 @@
   background-color: #222232;
   color: #acacac;
 }
-
-.modal {
-  position: fixed;
-  z-index: 200011;
-
-  display: flex;
-  margin-left: 5px;
-  align-items: center;
-  background: #09090e;
-
-  border: 5px solid #0a0a0a;
-  position: relative;
-  top: -15vh;
-  left: 10vw;
+.buttonconvite:hover {
+  cursor: pointer;
 }
+
 .modal-container {
-  width: 80vw;
+  height: 100vh;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal {
+  position: relative;
+}
+.container-convites {
+  border: 5px solid #000000;
+  padding: 200px 144px;
 }
 .fechar {
   z-index: 222222;
   position: absolute;
-  top: -15px;
-  right: -15px;
+  right: -1rem;
   width: 35px;
   height: 35px;
   border: 4px solid #000000;
@@ -106,7 +110,7 @@
 .btn-aceita {
   margin-top: 3vh;
   margin-bottom: 3vh;
-  margin-left: 10vw;
+  margin-left: 3rem;
   font-size: 1rem;
   width: fit-content;
   padding: 10px;
