--- a/frontend/src/pages/time/time.css
+++ b/frontend/src/pages/time/time.css
@@ -31,24 +31,25 @@ h1 {
   margin-top: 0 !important;
   margin-left: 0 !important;
 }
-.tituloPag{
+.tituloPag {
   margin-top: 3vh !important;
   margin-left: 6vw !important;
   margin-bottom: 3vh;
 }
-.nomeTime{
+.nomeTime {
   display: flex;
   justify-content: center;
-  margin-top: 0 !important;
+  margin-top: 1rem !important;
   font-size: 2rem !important;
+  margin-left: 0rem !important;
 }
-.texto-container{
+.texto-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
 }
-.messageBox{
+.messageBox {
   padding: 0.375rem 1.25rem;
   height: 5rem;
   margin-top: 0.4rem;
@@ -61,10 +62,10 @@ h1 {
   justify-content: center;
   margin-top: 4vh;
 }
-.espaço{
+.espaço {
   margin-top: 2vh !important;
 }
-.botaoCrieTime{
+.botaoCrieTime {
   position: absolute;
   bottom: 5rem;
   font-size: 1.25rem;
@@ -75,4 +76,18 @@ h1 {
   color: white;
   background-color: #19ae47;
   border: none;
+}
+
+@media (min-width: 600px) {
+  .tituloPag {
+    display: flex;
+    justify-content: center;
+    margin-left: 0vw !important;
+    margin-right: 40vw;
+  }
+}
+@media (min-width: 1100px) {
+  .tituloPag {
+    margin-right: 20vw;
+  }
 }
