todos !important removidos, css de time atualizado (mobile); css de mostrar torneio zoado. verificar.

--- a/frontend/src/components/EnvioConvite/EnvioConvite.css
+++ b/frontend/src/components/EnvioConvite/EnvioConvite.css
@@ -106,7 +106,7 @@
 }
 
 .caixa-destinatario {
-  background-color: #09090e !important;
+  background-color: #09090e;
   border: none;
   border-radius: 15px;
   color: #ffffff;
