--- a/frontend/src/pages/TorneioCriado/torneiocriado.css
+++ b/frontend/src/pages/TorneioCriado/torneiocriado.css
@@ -1,53 +1,50 @@
 body {
-    font-family: "Roboto Flex", sans-serif;
-    background-color: #161621 !important;
-    color: white !important; 
+  font-family: "Roboto Flex", sans-serif;
+  background-color: #161621;
+  color: white;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    width: 100vw;
-    border:none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  width: 100vw;
+  border: none;
 }
 
 .quadro {
-    width: 75vw;
-    height: 100px;
-    border: none;
-    padding: 20px;
-    margin-bottom: 20px;
-    background: #09090E;
-    align-items: center;
-
+  width: 75vw;
+  height: 100px;
+  border: none;
+  padding: 20px;
+  margin-bottom: 20px;
+  background: #09090e;
+  align-items: center;
 }
 
 .mensagem {
-    text-align: center;
+  text-align: center;
 }
 
 .botaoEnviar {
-    padding: 10px 20px;
-    margin-top: 20px !important;
-    background-color: #19AE47;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
+  padding: 10px 20px;
+  margin-top: 20px;
+  background-color: #19ae47;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .pesquisa {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 #nomeTime {
-    width: 200px;
-    padding: 10px;
-    background-color:  #09090E;
-    border: none;
-    color:white
-    
-
+  width: 200px;
+  padding: 10px;
+  background-color: #09090e;
+  border: none;
+  color: white;
 }
