--- a/frontend/src/pages/meusTorneios/meusTorneios.css
+++ b/frontend/src/pages/meusTorneios/meusTorneios.css
@@ -4,8 +4,14 @@
   flex-direction: column;
   align-items: center;
 }
+.tituloPag {
+  margin-top: 3vh;
+  margin-left: 6vw;
+  margin-bottom: 3vh;
+}
 .Mensagens {
-  padding: 0.375rem 1.25rem;
+  padding: 3rem 1.25rem;
+  gap: 1.5rem;
   height: 5rem;
   margin-top: 0.4rem;
   border-radius: 5px;
@@ -17,9 +23,7 @@
   justify-content: center;
   margin-top: 4vh;
 }
-.espaço2 {
-  margin-top: 2vh !important;
-}
+
 .botaoCrieCampeonato {
   margin: 1rem;
   bottom: 5rem;
@@ -31,5 +35,5 @@
   color: white;
   background-color: #19ae47;
   border: none;
-  align-items: center !important;
+  align-items: center;
 }
