--- a/frontend/src/pages/time/time.css
+++ b/frontend/src/pages/time/time.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #161621 !important;
+  background-color: #161621;
   margin: 0px;
   height: 100%;
   width: 100%;
@@ -25,32 +25,46 @@ img {
 
 h1 {
   font-family: "Roboto Flex", sans-serif;
-  font-size: 1.25rem !important;
-  color: white !important;
-  font-weight: 600 !important;
-  margin-top: 0 !important;
-  margin-left: 0 !important;
+  font-size: 1.25rem;
+  color: white;
+  font-weight: 600;
+  margin-top: 0;
+  margin-left: 0;
 }
 .tituloPag {
-  margin-top: 3vh !important;
-  margin-left: 6vw !important;
+  margin-top: 3vh;
+  margin-left: 6vw;
   margin-bottom: 3vh;
 }
-.nomeTime {
+.nomedoTime {
   display: flex;
   justify-content: center;
-  margin-top: 1rem !important;
-  font-size: 2rem !important;
-  margin-left: 0rem !important;
+  margin-top: 2rem;
+  font-size: 2rem;
+  margin-left: 0rem;
+}
+
+.envoltoJogPar {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.envoltoPartidas {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .texto-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  gap: 5rem;
+  margin-top: 2rem;
 }
 .messageBox {
-  padding: 0.375rem 1.25rem;
+  padding: 3rem 1.25rem;
+  gap: 1rem;
   height: 5rem;
   margin-top: 0.4rem;
   border-radius: 5px;
@@ -62,14 +76,18 @@ h1 {
   justify-content: center;
   margin-top: 4vh;
 }
-.espaço {
-  margin-top: 2vh !important;
+
+.formcrietime {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .botaoCrieTime {
   position: absolute;
   bottom: 5rem;
   font-size: 1.25rem;
-  font-family: Jockey One;
+
   width: 18.75rem;
   height: 3rem;
   border-radius: 0.313rem;
@@ -82,7 +100,7 @@ h1 {
   .tituloPag {
     display: flex;
     justify-content: center;
-    margin-left: 0vw !important;
+    margin-left: 0vw;
     margin-right: 40vw;
   }
 }
