--- a/frontend/src/components/EnvioConvite/EnvioConvite.css
+++ b/frontend/src/components/EnvioConvite/EnvioConvite.css
@@ -6,6 +6,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: fixed;
 }
 
 .envio-convite-form {
