--- a/frontend/src/components/gerarPartida/gerarPartida.css
+++ b/frontend/src/components/gerarPartida/gerarPartida.css
@@ -1,13 +1,3 @@
-.envio-convite-container {
-  width: 300px;
-  margin: 20px auto;
-  padding: 20px;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
 .envio-convite-form {
   display: flex;
   flex-direction: column;
@@ -67,7 +57,7 @@
 
 .fechar {
   z-index: 222222;
-  position: absolute;
+  position: relative;
   right: -1rem;
   width: 35px;
   height: 35px;
@@ -83,9 +73,11 @@
   cursor: pointer;
 }
 
-.envio-convite-container {
+.envio-convite-container1 {
   padding: 3rem 0rem;
-
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-left: 1.5rem;
   border-radius: 5px;
   align-items: center;
@@ -94,7 +86,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
+  position: fixed;
 }
 .envio-convite-container h2 {
   font-family: "Roboto Flex", sans-serif;
