--- a/frontend/src/components/navBar/navBar.css
+++ b/frontend/src/components/navBar/navBar.css
@@ -1,6 +1,5 @@
 .navbar-container {
   width: 100%;
-  height: 15vh;
 }
 .navBarHeader {
   height: 75%;
@@ -9,14 +8,26 @@
   justify-items: center;
   align-items: center;
   background-color: #222232;
+  position: relative;
+  z-index: 100;
 }
-.navBarSearch {
+.navBarHeader::after {
+  content: "";
+  display: flex;
+  position: absolute;
+  background-color: #2a2a30;
+  left: 0vw;
+  width: 100vw;
+  height: 0.2vh;
+  bottom: 0;
+}
+/* .navBarSearch {
   height: 25%;
   display: flex;
   justify-items: center;
   align-items: center;
-}
-.navBarSearch input {
+} 
+ .navBarSearch input {
   height: 3.8vh;
   padding-left: 2rem;
   border-radius: 0 0 0 15px;
@@ -37,7 +48,7 @@
   height: 4vh;
   width: 20vw;
   background-color: #353542;
-}
+} */
 .imagemenu {
   height: 4vh;
   width: 4vh;
@@ -62,17 +73,40 @@
 .menuHamButton:hover {
   cursor: pointer;
 }
-
+a {
+  text-decoration: none;
+}
 .menu {
-  position: absolute;
-  z-index: 13102003;
-  height: 84.9vh;
+  z-index: 99;
+  height: 100vh;
   width: 30vw;
   background-color: #222232;
+  position: fixed;
+  top: 0;
+}
+@keyframes slideIn {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.menuAberto {
+  animation: slideIn 0.5s ease forwards;
 }
 .botoesDiv {
   display: flex;
   flex-direction: column;
+  margin-top: 15vh;
+}
+.botoesDiv button {
+  transition: #222232 0.3s ease;
+  cursor: pointer;
+}
+.botoesDiv button:hover {
+  background-color: #575757; /* Efeito ao passar o mouse */
 }
 .botao1 {
   height: 5vh;
@@ -82,6 +116,7 @@
   margin-bottom: 5vh;
   background-color: #222232;
   color: #acacac;
+  text-decoration: none;
 }
 .botao1::before {
   content: "";
@@ -110,6 +145,7 @@
   border: none;
   background-color: #222232;
   color: #acacac;
+  text-decoration: none;
 }
 .botao2::before {
   content: "";
@@ -220,9 +256,15 @@
   position: absolute;
   background-color: #222232;
   color: #acacac;
-  bottom: -1px;
+  bottom: 20vh;
   width: 30vw;
   border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.logout:hover {
+  background-color: #4d4d4d;
 }
 .logout::before {
   content: "";
@@ -233,6 +275,16 @@
   width: 30vw;
   height: 0.2vh;
   top: -0.3vh;
+}
+.logout::after {
+  content: "";
+  display: flex;
+  position: absolute;
+  background-color: #4d4d4d;
+  left: 0vw;
+  width: 30vw;
+  height: 0.2vh;
+  top: 4.5vh;
 }
 
 a {
@@ -297,6 +349,9 @@ a:visited {
     width: 14.5rem;
   }
   .logout::before {
+    width: 14.5rem;
+  }
+  .logout::after {
     width: 14.5rem;
   }
 }
