--- a/frontend/src/pages/meusTorneios/meusTorneios.css
+++ b/frontend/src/pages/meusTorneios/meusTorneios.css
@@ -4,10 +4,12 @@
   flex-direction: column;
   align-items: center;
 }
-.tituloPag {
+.tituloPag1 {
+  margin-top: 5vh;
+  margin-left: 15vw;
+}
+.meustorneios {
   margin-top: 3vh;
-  margin-left: 6vw;
-  margin-bottom: 3vh;
 }
 .Mensagens {
   padding: 3rem 1.25rem;
