--- a/frontend/src/components/convite/convite.css
+++ b/frontend/src/components/convite/convite.css
@@ -10,9 +10,9 @@
   cursor: pointer;
 }
 
-.modal-container {
+.modal-container1 {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   background: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
@@ -23,7 +23,7 @@
   align-items: center;
 }
 
-.modal {
+.modal1 {
   position: relative;
 }
 
@@ -31,8 +31,9 @@
   padding: 3rem;
   background-color: #09090e;
   border-radius: 5px;
-  width: 300px; /* Ajuste o tamanho aqui */
+  width: 18.75rem; /* Ajuste o tamanho aqui */
   text-align: center; /* Centraliza o texto e os botões */
+  position: relative;
 }
 
 .tituloconvites {
@@ -41,11 +42,12 @@
   color: white;
   font-weight: 600;
   margin-bottom: 1rem;
+  border-bottom: 1px solid #ffffff31;
 }
 
 .convites-title {
-  font-size: 1rem;
-  color: #acacac;
+  font-size: 1.2rem;
+  color: #fff;
   margin-bottom: 1rem;
 }
 
@@ -67,6 +69,7 @@
   color: white;
   background-color: #19ae47;
   border: none;
+  font-weight: 700;
 }
 
 .btn-aceita:hover {
@@ -81,9 +84,33 @@
   color: white;
   background-color: #000;
   border: none;
+  font-weight: 700;
 }
 
 .btn-recusa:hover {
   background-color: #202020;
   cursor: pointer;
+}
+
+.fechar1 {
+  z-index: 222222;
+  position: absolute;
+  right: -1rem;
+  top: -1rem;
+  width: 35px;
+  height: 35px;
+  border: 4px solid #000000;
+  border-radius: 50%;
+  background-color: #000000;
+  color: #e7e7e7;
+  text-align: center;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 3rem */
+  cursor: pointer;
+}
+
+.naotem {
+  margin-bottom: 2rem;
 }
