--- a/frontend/src/components/gerarPartida/gerarPartida.css
+++ b/frontend/src/components/gerarPartida/gerarPartida.css
@@ -41,36 +41,18 @@
 
 .modal-container {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   background: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2000;
+  z-index: 20000;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .modal {
   position: relative;
-}
-
-.fechar {
-  z-index: 222222;
-  position: relative;
-  right: -1rem;
-  width: 35px;
-  height: 35px;
-  border: 4px solid #000000;
-  border-radius: 50%;
-  background-color: #000000;
-  color: #e7e7e7;
-  text-align: center;
-  font-size: 1.5rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 100%; /* 3rem */
-  cursor: pointer;
 }
 
 .envio-convite-container1 {
@@ -86,7 +68,24 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: fixed;
+  position: relative;
+}
+.fechar {
+  z-index: 222222;
+  position: absolute;
+  right: -1rem;
+  width: 35px;
+  height: 35px;
+  border: 4px solid #000000;
+  border-radius: 50%;
+  background-color: #000000;
+  color: #e7e7e7;
+  text-align: center;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 3rem */
+  cursor: pointer;
 }
 .envio-convite-container h2 {
   font-family: "Roboto Flex", sans-serif;
@@ -105,4 +104,50 @@
   color: #000;
   padding: 5px;
   margin-top: 1.5rem;
+}
+
+.search-results1 {
+  list-style-type: none; /* Remove as bolinhas padrão */
+  padding: 0; /* Remove o padding padrão */
+  margin-top: 1rem; /* Remove o margin padrão */
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 0.5rem;
+  flex-direction: column;
+}
+
+.search-results1 li {
+  padding: 10px; /* Espaçamento interno dos itens */
+  background-color: #1b1b29; /* Cor de fundo dos itens */
+  border: 1px solid #ccc; /* Linha separadora entre os itens */
+  width: 50%;
+}
+
+.search-results1 li:hover {
+  background-color: #2e2e33; /* Cor de fundo ao passar o mouse */
+}
+
+.search-results1 li a {
+  text-decoration: none; /* Remove o sublinhado dos links */
+  color: #333; /* Cor do texto */
+  display: block; /* Faz o link ocupar toda a área do item */
+}
+
+.search-results1 li a:hover {
+  color: #000; /* Muda a cor do texto ao passar o mouse */
+}
+
+.buttongerar {
+  margin-top: 1rem;
+}
+
+.nometor {
+  margin-bottom: 1rem;
+  font-family: "Roboto Flex", sans-serif;
+  font-size: 1.25rem;
+  color: white;
+  font-weight: 600;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #ffffff31;
 }
