--- a/frontend/src/components/navBar/navBar.css
+++ b/frontend/src/components/navBar/navBar.css
@@ -258,6 +258,7 @@ a {
   color: #acacac;
   bottom: 20vh;
   width: 30vw;
+  left: 0;
   border: none;
   cursor: pointer;
   transition: background-color 0.3s ease;
