--- a/frontend/src/components/jogador/stylenotas.css
+++ b/frontend/src/components/jogador/stylenotas.css
@@ -18,11 +18,15 @@
   background-color: #09090e;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 .jogadores-time1 h2 {
   font-size: 1rem;
 }
-
+.imagedelete {
+  position: absolute;
+  right: 2rem;
+}
 .info-j {
   display: flex;
   align-items: center;
