--- a/frontend/src/pages/CriarTorneio/criartorneio.css
+++ b/frontend/src/pages/CriarTorneio/criartorneio.css
@@ -33,6 +33,10 @@
 .input2802:focus {
   outline: 0;
 }
+.torneiocriar label {
+  font-size: 1.25rem;
+  font-family: Jockey One;
+}
 .tipoTorneio {
   padding: 20px;
   border-radius: 5px;
@@ -83,6 +87,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  gap: 5vh;
 }
 .baixo2 {
   display: flex;
@@ -102,4 +107,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media (min-width: 600px) {
+  .nomeTorneio {
+    margin-top: 5vw;
+  }
 }
