--- a/frontend/src/pages/time/time.css
+++ b/frontend/src/pages/time/time.css
@@ -39,7 +39,7 @@ h1 {
 .nomedoTime {
   display: flex;
   justify-content: center;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   font-size: 2rem;
   margin-left: 0rem;
 }
@@ -53,6 +53,32 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+.nometimeflex {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 2rem;
+}
+.imageedit1 {
+  margin-left: 1rem;
+}
+.sairTime {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.botaosairTime {
+  margin-top: 1rem;
+  font-size: 1.25rem;
+  font-family: Jockey One;
+  width: 18.75rem;
+  height: 2.5rem;
+  border-radius: 0.313rem;
+  color: white;
+  background-color: #c70909;
+  border: none;
 }
 .texto-container {
   display: flex;
@@ -87,7 +113,8 @@ h1 {
   position: absolute;
   bottom: 5rem;
   font-size: 1.25rem;
-
+  font-family: Jockey One;
+  cursor: pointer;
   width: 18.75rem;
   height: 3rem;
   border-radius: 0.313rem;
@@ -102,6 +129,9 @@ h1 {
     justify-content: center;
     margin-left: 0vw;
     margin-right: 40vw;
+  }
+  .messageBox {
+    width: 18.75rem;
   }
 }
 @media (min-width: 1100px) {
