--- a/frontend/src/pages/criarTime/criarTime.css
+++ b/frontend/src/pages/criarTime/criarTime.css
@@ -13,12 +13,14 @@
   height: 3rem;
   border-radius: 0.313rem;
   color: white;
+  cursor: pointer;
   background-color: #19ae47;
   border: none;
 }
 .inputCriarTime {
+  margin-top: 1rem;
   height: 4vh;
-  width: 80vw;
+  width: 40vw;
   border-radius: 15px;
   background-color: #09090e;
   color: white;
