envio de convite pra torneio funcionando (?) e botao de edit corrigido

--- a/frontend/src/pages/time/time.css
+++ b/frontend/src/pages/time/time.css
@@ -103,6 +103,10 @@ h1 {
   margin-top: 4vh;
 }
 
+.envoltoedit {
+  display: flex;
+  flex-direction: row;
+}
 .formcrietime {
   display: flex;
   justify-content: center;
